<resources>
    <string name="app_name">Calorie Counter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="odev_txt">Ödevimi yaptım</string>
    <string name="odev_txt2">Ödevim tamam</string>
    <string name="main_tile">Öğün Listem</string>
    <string name="main_two_tile">Kahvaltı</string>
    <string name="main_icerik">-Yumurta</string>
    <string name="main_icerik_iki">-Süt</string>
    <string name="page_one_text">Öğün Ekle</string>
    <string name="page_one_text_two">Total: -1865</string>
    <string name="profil_gecicitxt">Profil Sayfası</string>


    ------------------------------------------------------

    <string name="meal_eaten_page_title_one">İdman</string>
    <string name="meal_eaten_page_text_one">İdman Adı</string>
    <string name="meal_eaten_page_text_two">İdman Türü</string>
    <string name="meal_eaten_page_text_Three">İdman Miktarı</string>
    <string name="meal_eaten_page_text_four">Manuel Yakınlan Kalori Gir</string>
    <string name="meal_eaten_page_text_five">Ekle</string>


    --------------------------------------------------------------

    <string name="meal_burned_page_text_one">Öğün Adı</string>
    <string name="meal_burned_page_text_two">Besin Seç</string>
    <string name="meal_burned_page_text_three">Besin Miktarı</string>
    <string name="meal_burned_page_text_four">Besin Miktarı</string>
    <string name="meal_eburned_page_text_five">Manual Kalori Gir</string>


    ------------------------------------------------------------

    <string name="fragment_burned_text_one">İdman Listem</string>
    <string name="fragment_burned_text_two">Adım</string>
    <string name="fragment_burned_text_three">-8966 Adım</string>
    <string name="fragment_burned_text_four">Uyku</string>
    <string name="fragment_burned_text_five">-8 Saat</string>
    <string name="fragment_burned_text_six">Fitness</string>
    <string name="fragment_burned_text_seven">-1 Saat</string>
    <string name="fragment_burned_text_eight">Tüketilen Su</string>
    <string name="fragment_burned_text_nigth">-8 Bardak</string>
    <string name="fragment_burned_text_ten">İdman ekle</string>
    <string name="fragment_burned_text_eleven">total:</string>
    <string name="fragment_burned_text_twelve">-1568 k</string>

    -----------------------------------------------------------

    <string name="fragment_profil_text_one">Profil</string>
    <string name="fragment_profil_text_two">Düzenle</string>
    <string name="fragment_profil_text_three">Ali Veli Kısa</string>
    <string name="fragment_profil_text_four">Erkek</string>
    <string name="fragment_profil_text_five">19 Yaş</string>
    <string name="fragment_profil_text_six">75 Kg</string>
    <string name="fragment_profil_text_seven">Geçmiş Kalorim</string>
    <string name="fragment_profil_text_eight">-75 C</string>
    <string name="fragment_profil_text_nigth">+131 C</string>
    <string name="fragment_profil_text_ten">+200 C</string>


    -----------------------------------------------------main

    <string name="nav_main_eat_calori">Alınan Kalori</string>
    <string name="nav_main_burned_calori">Yakılan Kalori</string>
    <string name="nav_main_profil">Profil</string>

</resources>