<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligh_blue"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="90dp"
        android:src="@drawable/logoss"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="330dp"
        android:layout_height="600dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="35dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:text="@string/fragment_profil_text_one"
                android:textColor="@color/black"
                android:textSize="38sp"
                android:textStyle="italic"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/title_text_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/fragment_profil_text_three"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="normal"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text" />

            <TextView
                android:id="@+id/title_text_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fragment_profil_text_four"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_two" />

            <TextView
                android:id="@+id/title_text_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fragment_profil_text_five"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_three" />

            <TextView
                android:id="@+id/title_text_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/fragment_profil_text_six"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="normal"
                android:layout_marginStart="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_text_four" />




            <ImageView
                android:id="@+id/pp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@drawable/kare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/title_text"
                app:layout_constraintTop_toTopOf="@+id/title_text" />

            <ImageView
                android:id="@+id/pp_icon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="25dp"
                android:src="@drawable/pp"
                app:layout_constraintBottom_toBottomOf="@+id/pp"
                app:layout_constraintEnd_toEndOf="@+id/pp"
                app:layout_constraintStart_toStartOf="@+id/pp"
                app:layout_constraintTop_toTopOf="@+id/pp" />

            <ImageView
                android:id="@+id/pp_icon_plus"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="25dp"
                android:src="@drawable/plus"
                app:layout_constraintBottom_toBottomOf="@+id/pp"
                app:layout_constraintEnd_toEndOf="@+id/pp"
                />


            <TextView
                android:id="@+id/title_pp_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="58dp"
                android:text="@string/fragment_profil_text_seven"
                android:textColor="@color/orange"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


            <ImageView
                android:id="@+id/calori_one"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/kare"
                android:layout_marginStart="25dp"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_pp_one" />

            <TextView
                android:id="@+id/calori_one_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profil_text_eight"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/calori_one"
                app:layout_constraintTop_toTopOf="@+id/calori_one"
                app:layout_constraintEnd_toEndOf="@+id/calori_one"
                app:layout_constraintBottom_toBottomOf="@+id/calori_one"/>


            <ImageView
                android:id="@+id/calori_two"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/kare"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toTopOf="@+id/calori_one"
                app:layout_constraintStart_toEndOf="@+id/calori_one"
                app:layout_constraintTop_toBottomOf="@+id/title_pp_one"/>


            <TextView
                android:id="@+id/calori_two_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profil_text_nigth"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/calori_two"
                app:layout_constraintTop_toTopOf="@+id/calori_two"
                app:layout_constraintEnd_toEndOf="@+id/calori_two"
                app:layout_constraintBottom_toBottomOf="@+id/calori_two"/>

            <ImageView
                android:id="@+id/calori_three"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/kare"
                android:layout_marginStart="25dp"
                app:layout_constraintTop_toTopOf="@+id/calori_two"
                app:layout_constraintStart_toEndOf="@+id/calori_two"
                app:layout_constraintTop_toBottomOf="@+id/title_pp_one" />

            <TextView
                android:id="@+id/calori_three_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_profil_text_ten"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/calori_three"
                app:layout_constraintTop_toTopOf="@+id/calori_three"
                app:layout_constraintEnd_toEndOf="@+id/calori_three"
                app:layout_constraintBottom_toBottomOf="@+id/calori_three"/>






            <View
                android:id="@+id/line"
                android:layout_width="60dp"
                android:layout_height="3dp"
                android:background="@color/ligh_blue"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/calori_three"/>






        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>