<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ligh_blue"
    tools:context=".MainActivity">




    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="330dp"
        android:layout_height="600dp"
        card_view:cardCornerRadius="35dp"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_tile"
                android:textSize="24sp"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:textColor="@color/orange" />


        </androidx.constraintlayout.widget.ConstraintLayout>




        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp">


            <ImageView
                android:id="@+id/image_one"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:src="@drawable/gorsell" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                card_view:layout_constraintStart_toStartOf="@id/image_one"
                card_view:layout_constraintEnd_toEndOf="@id/image_one"
                card_view:layout_constraintTop_toTopOf="@id/image_one"
                android:layout_marginEnd="150dp">

                <TextView
                    android:id="@+id/text_title_first"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_two_tile"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_title_second"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_icerik"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    card_view:layout_constraintTop_toBottomOf="@+id/text_title_first"/>

            </androidx.constraintlayout.widget.ConstraintLayout>



            <ImageView
                android:id="@+id/image_two"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:src="@drawable/gorsell"
                android:layout_marginTop="35dp"
                card_view:layout_constraintTop_toBottomOf="@+id/image_one"/>

            <ImageView
                android:id="@+id/image_three"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:src="@drawable/gorsell"
                android:layout_marginTop="35dp"
                card_view:layout_constraintTop_toBottomOf="@+id/image_two"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>